# Avatar-Talk

./: README.md  setup.sh  start-dev.sh
backend/: pyproject.toml  run.py
backend/app/modules/avatar/: lipsync.py  router.py  tts.py
backend/app/modules/shared/: config.py
frontend/: package-lock.json  package.json
frontend/src/: App.jsx  index.css
frontend/src/components/: ParticleBackground.jsx
frontend/src/modules/avatar/: AvatarModule.jsx  LatemanAvatar.jsx
frontend/src/modules/avatar/utils/: lipsyncUtils.js
frontend/src/modules/chatbot/: ChatModule.jsx
frontend/src/modules/shared/: AppContext.jsx
