[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "chromadb>=1.3.4",
    "fastapi==0.109.0",
    "google-generativeai>=0.8.5",
    "langchain>=0.3.27",
    "langchain-community>=0.3.31",
    "langchain-google-genai>=2.0.10",
    "langchain-openai>=0.3.35",
    "mutagen>=1.47.0",
    "numpy>=2.3.4",
    "openai>=2.7.2",
    "passlib[bcrypt]>=1.7.4",
    "pydantic-settings>=2.12.0",
    "pypdf>=6.2.0",
    "python-docx>=1.2.0",
    "python-dotenv>=1.2.1",
    "python-jose[cryptography]>=3.5.0",
    "python-multipart==0.0.6",
    "requests>=2.32.5",
    "resemble>=1.7.0",
    "uvicorn[standard]==0.27.0",
    "websockets==12.0",
]
